# urdekcah

./: .gitignore  Cargo.toml  README.md  urdekcah.toml
.github/workflows/: obnovleniye-pogody.yml  obnovleniye-readme.yml  obnovleniye-statistiki.yml
base/: Cargo.toml
base/src/: dotenv.rs  error.rs  lib.rs  translate.rs
config/: Cargo.toml
config/src/: config.rs  lib.rs
error/: Cargo.toml
error/src/: lib.rs
src/: error.rs  lib.rs  main.rs
src/models/: mod.rs  weather.rs
src/service/: weather.rs
src/utils/: file.rs
telegram/: Cargo.toml
telegram/src/: builders.rs  client.rs  config.rs  lib.rs  types.rs
urdekcah/: Cargo.toml
urdekcah/src/: main.rs
wakatime/: Cargo.toml
wakatime/src/: config.rs  error.rs  lib.rs  service.rs  stats.rs  template.rs  wakatime.rs
weather/: Cargo.toml
weather/src/: config.rs  lib.rs  service.rs
weather/src/models/: api.rs  weather.rs
weather/src/service/: mod.rs  weather.rs
weather/src/utils/: mod.rs
