[package]
name = "urdekcah"
authors = ["urdekcah <ya@urdekcah.ru>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
anyhow = "1.0"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5.4"

[dev-dependencies]
mockall = "0.13.1"