[package]
name = "wakatime"
authors.workspace = true
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
regex.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# urdekcah
config.workspace = true
error.workspace = true