[package]
name = "weather"
authors.workspace = true
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

# urdekcah
base.workspace = true